--- a/app/views/timeline_win.xml
+++ b/app/views/timeline_win.xml
@@ -7,7 +7,7 @@
 			<TableViewRow hasChild = "true" onClick = "mostraDettaglioEvento">
 				<Label id = "rowIcon"/>
 				<Label id = "name" text ="{name}"/>
-				<Label id = "awesome" text="{awesome}"/>
+				<Label id = "aspects" text="{aspects}"/>
 				<Label id = "category" text ="{category}"/>
 			</TableViewRow>
 		</TableView>
