--- a/app/views/rowDOCUMENT.xml
+++ b/app/views/rowDOCUMENT.xml
@@ -1,7 +1,8 @@
 <Alloy>
-	<TableViewRow>
-		<ImageView id="image"/>
-		<Label id="date"/>
-		<Label id="title"/>
+	<TableViewRow id="row">
+		<Label id="description"/>
+		<Label id="titolo"/>
+		<Label id="format"/>
+		<Label id="type"/>		
 	</TableViewRow>
 </Alloy>
