--- a/app/views/rowLINK.xml
+++ b/app/views/rowLINK.xml
@@ -1,7 +1,8 @@
 <Alloy>
-	<TableViewRow>
-		<ImageView id="image"/>
-		<Label id="date"/>
+	<TableViewRow id="row">
+		<Label id="description"/>
 		<Label id="title"/>
+		<Label id="type"/>
+		<Label id="content"/>
 	</TableViewRow>
 </Alloy>
