--- a/app/views/rowLINK.xml
+++ b/app/views/rowLINK.xml
@@ -1,8 +1,17 @@
 <Alloy>
 	<TableViewRow id="row">
 		<Label id="description"/>
-		<Label id="title"/>
-		<Label id="type"/>
-		<Label id="content"/>
+		<View class="block_container" layout="horizontal">
+			<Label class="block_label" text="Titolo: ">
+			<Label class="block_data" id="title"/>
+		</View>
+		<View class="block_container" layout="horizontal">
+			<Label class="block_label" text="Tipo: ">
+			<Label class="block_data" id="type"/>
+		</View>
+		<View class="block_container" layout="horizontal">
+			<Label class="block_label" text="Contenuto: ">
+			<Label class="block_data" id="content"/>
+		</View>
 	</TableViewRow>
 </Alloy>
