--- a/app/views/rowDetailLINK.xml
+++ b/app/views/rowDetailLINK.xml
@@ -1,22 +1,22 @@
 <Alloy>
-	<TableViewSection>
-		<TableViewRow class="detailAspectRow">
-			<Label class="rowLabel" id="name"/>		
-		</TableViewRow>
-		<TableViewRow class="detailAspectRow">
-			<Label class="rowLabel" id="category"/>		
-		</TableViewRow>
-		<TableViewRow class="detailAspectRow">
-			<Label class="rowLabel" id="tags"/>		
-		</TableViewRow>
-		<TableViewRow class="detailAspectRow">
-			<Label class="rowLabel" id="type"/>		
-		</TableViewRow>
-		<TableViewRow class="detailAspectRow">
-			<Label class="rowLabel" id="content"/>		
-		</TableViewRow>
-		<TableViewRow class="detailAspectRow">
+	<TableViewRow id="row">
+		<Label id="description"/>
+		<Label id="category"/>
+		<View class="block_container">
+			<Label class="block_label" text=" Tags">
+			<Label class="block_data" id="tags"/>
+		</View>
+		<View class="block_container">
+			<Label class="block_label" text=" Tipo">
+			<Label class="block_data" id="type"/>
+		</View>
+		<View class="block_container">
+			<Label class="block_label" text=" Contenuto">
+			<Label class="block_data" id="content" onClick="openLink"/>
+		</View>
+		<View class="block_container">
+			<Label class="block_label" text=" Preview">
 			<ImageView id="img_preview"/>
-		</TableViewRow>
-	</TableViewSection>
+		</View>
+	</TableViewRow>
 </Alloy>
