--- a/app/views/rowDetailNOTE.xml
+++ b/app/views/rowDetailNOTE.xml
@@ -1,16 +1,14 @@
 <Alloy>
-	<TableViewSection>
-		<TableViewRow class="detailAspectRow">
-			<Label class="rowLabel" id="name"/>		
-		</TableViewRow>
-		<TableViewRow class="detailAspectRow">
-			<Label class="rowLabel" id="category"/>		
-		</TableViewRow>
-		<TableViewRow class="detailAspectRow">
-			<Label class="rowLabel" id="timestamp"/>		
-		</TableViewRow>
-		<TableViewRow class="detailAspectRow">	
+	<TableViewRow id="row">
+		<Label id="description"/>
+		<Label id="category"/>
+		<View class="block_container">
+			<Label class="block_label" text=" Timestamp">
+			<Label class="block_data" id="timestamp"/>
+		</View>
+		<View class="block_container">
+			<Label class="block_label" text=" Contenuto">
 			<WebView class="rowLabel" id="content"/>
-		</TableViewRow>
-	</TableViewSection>
+		</View>
+	</TableViewRow>
 </Alloy>
