--- a/app/views/timeline_win.xml
+++ b/app/views/timeline_win.xml
@@ -1,26 +1,48 @@
 <Alloy>
-	
-	<Collection src = "events">
-	<Window class="container" title = "Timeline" onOpen="showSpinner">
-		
+
+	<Collection src = "events"/>
+	<Window id="win" class="container" title = "Diario" onOpen="showSpinner" onScroll="lazyload">
+
+		<!-- The Menu tag adds the Android menu. -->
+		<Menu id="menu" platform="android">
+
+			<!-- Cannot specify node text.  Use attributes only. -->
+			<MenuItem id="scrivi" title="Scrivi" icon="/images/187-pencil.png"  showAsAction="Ti.Android.SHOW_AS_ACTION_IF_ROOM" />
+			<MenuItem id="immagine" title="Immagine" icon="/images/121-landscape.png"  showAsAction="Ti.Android.SHOW_AS_ACTION_IF_ROOM" />
+			<MenuItem id="Foto" title="Foto" icon="/images/86-camera.png"  showAsAction="Ti.Android.SHOW_AS_ACTION_IF_ROOM" />
+		</Menu>
 		<TableView id = "timelineTable" dataCollection = "events" >
+
 			<TableViewRow onClick = "mostraDettaglioEvento">
-				<!--<Label id = "rowIcon"/>-->
+
 				<View id="eventContainer">
-					<View id="dateBox">
-						<Label id="dayBox" text="{day}"/>
-						<Label id="monthBox" text="{month}"/>
+
+					<View id="topWrapper">
+
+						<ImageView id="postIcon"></ImageView>
+						<View id="headerWrapper">
+							<View id="nameDateWrapper">
+								<Label id = "name" text ="{name}"/>
+								<Label id = "date" text ="{date}"/>
+							</View>
+							<Label id = "category" text ="{category}"/>
+							<Label id = "location" text ="{location}"/>
+
+						</View>
+
 					</View>
-					<View id="headerBox">
-						<Label id = "name" text ="{name}"/>
+					<View id="bottomWrapper">
+
 						<Label id = "aspects" text="{aspects}"/>
-						<Label id = "category" text ="{category}"/>
-						<Label id = "location" text ="{location}"/>
+
 					</View>
 				</View>
+
+				<!--<Label id = "rowIcon"/>-->
+
 			</TableViewRow>
 		</TableView>
-		
+
 	</Window>
-	
+
 </Alloy>
