--- a/app/views/newPost.xml
+++ b/app/views/newPost.xml
@@ -1,4 +1,16 @@
 <Alloy>
-	<View class="container">
-	</View>
+	<Window class="container" title = "Nuovo Post">
+
+		<TableView id="newPostTable">
+
+			<TableViewRow id="row">
+				<TextField id="titolo"></TextField>>
+			</TableViewRow>
+			<TableViewRow id="row" leftImage="/images/259-list.png">
+				<Picker id="pkrCategoria" selectionIndicator="true"/>
+			</TableViewRow>
+
+		</TableView>
+
+	</Window>
 </Alloy>
