--- a/app/views/timeline_win.xml
+++ b/app/views/timeline_win.xml
@@ -8,7 +8,7 @@
 
 			<!-- Cannot specify node text.  Use attributes only. -->
 			<MenuItem id="scrivi" title="Scrivi" icon="/images/216-compose.png"  onClick="createNewPost" showAsAction="Ti.Android.SHOW_AS_ACTION_IF_ROOM" />
-			<MenuItem id="immagine" title="Immagine" icon="/images/121-landscape.png"  showAsAction="Ti.Android.SHOW_AS_ACTION_IF_ROOM" />
+			<MenuItem id="immagine" title="Immagine" icon="/images/121-landscape.png" onClick="populateTable" showAsAction="Ti.Android.SHOW_AS_ACTION_IF_ROOM" />
 			<MenuItem id="Foto" title="Foto" icon="/images/86-camera.png"  showAsAction="Ti.Android.SHOW_AS_ACTION_IF_ROOM" />
 		</Menu>
 		<TableView id = "timelineTable" dataCollection = "events" >
