--- a/app/views/getLocation.xml
+++ b/app/views/getLocation.xml
@@ -2,7 +2,7 @@
 	<Window id="window" class="container" title = "Posizione" onOpen="reverseGeocoding">
 		<Menu id="menu" platform="android">
 
-			<MenuItem id="salva" title="Scrivi" icon="/images/1040-checkmark@2x.png" onClick="storeLocation" showAsAction="Ti.Android.SHOW_AS_ACTION_IF_ROOM" />
+			<MenuItem id="salva" title="Scrivi" icon="/images/1040-checkmark.png" onClick="storeLocation" showAsAction="Ti.Android.SHOW_AS_ACTION_IF_ROOM" />
 
 		</Menu>
 		<View id="mapview" ns="Alloy.Globals.Map"/>
@@ -11,7 +11,7 @@
 			<Button onClick="reverseGeocoding" id="centra" />
 
 		</View>
-		<SearchBar id="searchAddress"/>
+		<SearchBar id="searchAddress" onReturn="forwardGeocoding"/>
 		
 		<TableView id="disambiguazioneTable"/>
 
