--- a/app/views/timeline_win.xml
+++ b/app/views/timeline_win.xml
@@ -1,7 +1,7 @@
 <Alloy>
 
 	<!--<Collection src = "events" id="subsetEvents" instance="true"/>-->
-	<Window id="win" class="container" title = "Diario" >
+	<Window id="win" class="container" title = "Diario" onOpen="openEvent">
 
 		<!-- The Menu tag adds the Android menu. -->
 		<Menu id="menu" platform="android">
@@ -11,7 +11,7 @@
 			<MenuItem id="mn_search" title="Immagine" onClick="refreshTable"/>
 			<!--<MenuItem id="Foto" title="Foto" icon="/images/86-camera.png"  showAsAction="Ti.Android.SHOW_AS_ACTION_IF_ROOM" />-->
 		</Menu>
-		<TableView id = "timelineTable" dataCollection="Timeline" dataFunction="syncTimeline" dataTransform="transformData">
+		<TableView id = "timelineTable"  dataCollection="Timeline" dataFunction="syncTimeline" dataTransform="transformData">
 
 			<TableViewRow class="row" onClick = "mostraDettaglioEvento">
 
@@ -81,6 +81,7 @@
 				<!--<Label id = "rowIcon"/>-->
 
 			</TableViewRow>
+			<Widget id="is" src="nl.fokkezb.infiniteScroll" onEnd="loadMoreRows" msgDone="Fine della lista"/>
 		</TableView>
 		<View id="bottomBar">
 			<!--<Label class="separator"/>-->
@@ -88,15 +89,15 @@
 
 				<View class="icon_container first" onClick="refreshTable">
 					<Label class="icon" id="bottom_sync"/>
-					<Label class="btn_text" id="txt_sync"/>
+					<Label class="bottom_bar_text" id="txt_sync"/>
 				</View>
 				<View class="icon_container" onClick="createNewPost">
 					<Label class="icon" id="bottom_new"/>
-					<Label class="btn_text" id="txt_new"/>
+					<Label class="bottom_bar_text" id="txt_new"/>
 				</View>
 				<View class="icon_container">
 					<Label class="icon" id="bottom_today"/>
-					<Label class="btn_text" id="txt_today"/>
+					<Label class="bottom_bar_text" id="txt_today"/>
 				</View>
 
 			</View>
