--- a/platform/android/res/values/style.xml
+++ b/platform/android/res/values/style.xml
@@ -7,6 +7,6 @@
          <item name="android:titleTextStyle">@style/Theme.ZiriZiriTheme.ActionBar.TitleTextStyle</item>
     </style>        
    <style name="Theme.ZiriZiriTheme.ActionBar.TitleTextStyle" parent="android:style/TextAppearance.Holo.Widget.ActionBar.Title">
-        <item name="android:textColor">#5EAEE3</item>
+        <item name="android:textColor">#5FAEE3</item>
     </style>           
 </resources>
