--- a/app/views/dettaglio_post.xml
+++ b/app/views/dettaglio_post.xml
@@ -1,6 +1,22 @@
 <Alloy>
-	<Window class="container"  onOpen="closeActivityIndicator" title = "Dettaglio Post">
+	<Window id="win" title="Post" class="container"  onOpen="closeActivityIndicator" title = "Dettaglio Post">
+		
+		<!-- The Menu tag adds the Android menu. -->
+		<Menu id="menu" platform="android">
 
+			<!-- Cannot specify node text.  Use attributes only. -->
+			<MenuItem id="mn_notify" title="Scrivi"/>
+			<MenuItem id="mn_search" title="Immagine" onClick="refreshTable"/>
+			<!--<MenuItem id="Foto" title="Foto" icon="/images/86-camera.png"  showAsAction="Ti.Android.SHOW_AS_ACTION_IF_ROOM" />-->
+		</Menu>
+		
+		<TableView id = "postTable"  dataCollection="Timeline" dataFunction="syncTimeline" dataTransform="transformData">
+
+			<TableViewRow class="row" onClick = "mostraDettaglioEvento">
+		
+		
+		
+		
 		<View id="detailHeader">
 			<View id="dateBox">
 				<Label id="dayBox"/>
